--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
   </head>
   <body>
     <section>
+      <img src="/img/bg1.png" alt="" />
       <a href=""></a>
       <!-- LOGIN -->
       <form action="/about.html" method="">
         <div class="wrapper">
+          <img class="cover" src="/img/32.gif" alt="" />
           <h1>LOGIN</h1>
           <div class="user">
             <input type="text" placeholder="Username" />
